Bug 1399412 - Work around clang assertion by wrapping lz4.c in an extern C block. r=froydnj

MozReview-Commit-ID: LLgSbJadbyJ