mfbt/Compression.cpp
@@ -25,7 +25,11 @@ using namespace mozilla::Compression;
 
 namespace {
 
+extern "C" {
+
 #include "lz4.c"
+
+}
 
 }/* anonymous namespace */
 
